--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Second-Repo</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias reprehenderit eveniet quasi quas quaerat, obcaecati delectus consectetur voluptatum amet illum, consequuntur, laudantium ab vitae eius! Odit quae perspiciatis eos sapiente!</p>
 </body>
 </html>
