--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <div>
+        <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias reprehenderit eveniet quasi quas quaerat, obcaecati delectus consectetur voluptatum amet illum, consequuntur, laudantium ab vitae eius! Odit quae perspiciatis eos sapiente!</p>
+    </div>
+
 </body>
 </html>
