--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
-    <p class="hemel">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias reprehenderit eveniet quasi quas quaerat, obcaecati delectus consectetur voluptatum amet illum, consequuntur, laudantium ab vitae eius! Odit quae perspiciatis eos sapiente!</p>
+    <p class="tanvirhemel">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias reprehenderit eveniet quasi quas quaerat, obcaecati delectus consectetur voluptatum amet illum, consequuntur, laudantium ab vitae eius! Odit quae perspiciatis eos sapiente!</p>
     </div>
+    <a href="https://github.com/joshnh/Git-Commands"></a>
 
 </body>
 </html>
