--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
     <h3>New code changed</h3>
-    <p class="tanvirhemel">কিরে বলদা হালারপো হালারা কি অবস্থা </p>
+    <p class="tanvirhemel">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium facere repellendus laborum, alias asperiores ducimus! Quibusdam, inventore doloribus nulla sapiente necessitatibus itaque tempore id. Quam labore laboriosam quos nam eos.</p>
     </div><br>
     <a href="https://github.com/joshnh/Git-Commands">go mama</a>
 
